errorlog.txt
CollectionDriver.cpp: In function 'int main()':
CollectionDriver.cpp:19:5: error: 'assert' was not declared in this scope
     assert TestClassArray.isEmpty();
     ^~~~~~
CollectionDriver.cpp:22:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.insert(obj1);
            ^~~~~~~~~~~~~~
CollectionDriver.cpp:25:12: error: expected ';' before '!' token
     assert !TestClassArray.notContained(obj1);
            ^
CollectionDriver.cpp:26:12: error: expected ';' before '!' token
     assert !TestClassArray.notContained(obj2);
            ^
CollectionDriver.cpp:29:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.insert(obj2);
            ^~~~~~~~~~~~~~
CollectionDriver.cpp:31:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.notContained(obj1)
            ^~~~~~~~~~~~~~
CollectionDriver.cpp:33:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.insert(obj3);
            ^~~~~~~~~~~~~~
CollectionDriver.cpp:34:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.insert(obj3);
            ^~~~~~~~~~~~~~
CollectionDriver.cpp:35:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.insert(obj4);
            ^~~~~~~~~~~~~~
CollectionDriver.cpp:36:12: error: expected ';' before '!' token
     assert !TestClassArray.insert(obj1);
            ^
CollectionDriver.cpp:38:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.notContained(obj3);
            ^~~~~~~~~~~~~~
CollectionDriver.cpp:42:12: error: expected ';' before 'TestClassArray'
     assert TestClassArray.isEmpty();
            ^~~~~~~~~~~~~~
In file included from CollectionDriver.cpp:5:0:
Collection.cpp: In instantiation of 'void Collection<T>::remove(T) [with T = TestClass]':
CollectionDriver.cpp:30:31:   required from here
Collection.cpp:137:26: error: no match for 'operator=' (operand types are 'TestClass' and 'TestClass*')
                 items[i] = new T();
                 ~~~~~~~~~^~~~~~~~~
In file included from TestClass.cpp:3:0,
                 from CollectionDriver.cpp:6:
TestClass.h:5:7: note: candidate: constexpr TestClass& TestClass::operator=(const TestClass&)
 class TestClass {
       ^~~~~~~~~
TestClass.h:5:7: note:   no known conversion for argument 1 from 'TestClass*' to 'const TestClass&'
In file included from CollectionDriver.cpp:5:0:
Collection.cpp: In instantiation of 'void Collection<T>::makeEmpty() [with T = TestClass]':
CollectionDriver.cpp:41:30:   required from here
Collection.cpp:116:22: error: no match for 'operator=' (operand types are 'TestClass' and 'TestClass*')
             items[i] = new T();
             ~~~~~~~~~^~~~~~~~~
In file included from TestClass.cpp:3:0,
                 from CollectionDriver.cpp:6:
TestClass.h:5:7: note: candidate: constexpr TestClass& TestClass::operator=(const TestClass&)
 class TestClass {
       ^~~~~~~~~
TestClass.h:5:7: note:   no known conversion for argument 1 from 'TestClass*' to 'const TestClass&'
In file included from CollectionDriver.cpp:5:0:
Collection.cpp: In instantiation of 'void Collection<T>::removeRandom() [with T = TestClass]':
CollectionDriver.cpp:49:33:   required from here
Collection.cpp:156:27: error: no match for 'operator=' (operand types are 'TestClass' and 'TestClass*')
         items[distr(eng)] = new T();
         ~~~~~~~~~~~~~~~~~~^~~~~~~~~
In file included from TestClass.cpp:3:0,
                 from CollectionDriver.cpp:6:
TestClass.h:5:7: note: candidate: constexpr TestClass& TestClass::operator=(const TestClass&)
 class TestClass {
       ^~~~~~~~~
TestClass.h:5:7: note:   no known conversion for argument 1 from 'TestClass*' to 'const TestClass&'
